fix: missing margin

--- a/src/Styles/Components/ProjectCard.css
+++ b/src/Styles/Components/ProjectCard.css
@@ -6,7 +6,7 @@
 
     border: 1px black solid;
 
-    margin: 0px 20px;
+    margin: 10px 20px;
 
     .project-card-container 
     {
